Added more content and finished the Tonfa Smithing Text table in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -2341,6 +2341,230 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Tonfa Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="tonfa" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Tonfa Smithing Texts</h2>
+            <img src="./img/tonfa_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Double-Headed Snake Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td>Double-Headed Snake Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Magara Naotaka</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Corpses And Ice</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Brother's Blades</a>
+					</td>
+				</tr>
+
+				<!-- Lost Kingdom Tonfa -->
+				<tr class="">
+					<td>Lost Kingdom Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
+					</td>
+				</tr>
+
+				<!-- Pagoda Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td>Pagoda Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lightning Gods Of Yomi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Palace Of The Damned</a>
+					</td>
+				</tr>
+
+				<!-- Sarutobi's Gunsticks -->
+				<tr class="">
+					<td>Sarutobi's Gunsticks</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Searing Bolt Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td>Searing Bolt Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a>
+					</td>
+				</tr>
+
+				<!-- Seventh Sword Tonfa -->
+				<tr class="">
+					<td rowspan="3">Seventh Sword Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Twin Dragon Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">Twin Dragon Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Oni Shibata</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara-Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+
+				<!-- Vajra Tonfa -->
+				<tr class="">
+					<td rowspan="2">Vajra Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- White Bone Spirit Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">White Bone Spirit Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point of no Return</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Tonfa -->
+				<tr class="">
+					<td>Wooden Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Like Lightning</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Yin-Yang Tonfa -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Yin-Yang Tonfa</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Tonfa -->
+				<tr class="">
+					<td>Demon Horde Tonfa</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
