Added more content and finished the Hatchets Smithing Text table in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -2565,6 +2565,207 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Hatchets Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="hatchets" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Hatchets Smithing Texts</h2>
+            <img src="./img/hatchets_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Barbarian's Hatchets -->
+				<tr class="bg-dark-gray-2">
+					<td>Barbarian's Hatchets</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Point Of No Return</a>
+					</td>
+				</tr>
+
+				<!-- Black Rain & Thunder -->
+				<tr class="">
+					<td>Black Rain & Thunder</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a>
+					</td>
+				</tr>
+
+				<!-- Echoing Thunder -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Echoing Thunder</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Iceberg -->
+				<tr class="">
+					<td rowspan="2">Iceberg</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Radiant Flame -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">Radiant Flame</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Oni Shibata</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara-Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+
+				<!-- Sun And Moon Hatchets -->
+				<tr class="">
+					<td>Sun And Moon Hatchets</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nue</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Darkness Brewing (Twilight Mission)</a>
+					</td>
+				</tr>
+
+				<!-- Urn Splitter Hatchets -->
+				<tr class="bg-dark-gray-2">
+					<td>Urn Splitter Hatchets</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shibata Katsuie</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Shiftling's Wise Judgement</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a>
+					</td>
+				</tr>
+
+				<!-- Wave Cutter Hatchets -->
+				<tr class="">
+					<td>Wave Cutter Hatchets</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sakata Kintoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unstoppable Whirlwind</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Hatchets -->
+				<tr class="bg-dark-gray-2">
+					<td>Wooden Hatchets</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sakata Kintoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unstoppable Whirlwind</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Zenki And Goki -->
+				<tr class="">
+					<td rowspan="2">Zenki And Goki</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Hatchets -->
+				<tr class="bg-dark-gray-2">
+					<td>Demon Horde Hatchets</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
