Added more content and finished the Switchglaive Smithing Text table in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -2766,6 +2766,214 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Switchglaive Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="switchglaive" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Switchglaive Smithing Texts</h2>
+            <img src="./img/switchglaive.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Black Lotus -->
+				<tr class="bg-dark-gray-2">
+					<td>Black Lotus</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mumyo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sharp Eyes</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Evil-Crusher Switchglaive -->
+				<tr class="">
+					<td>Evil-Crusher Switchglaive</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Kiryoki's Switchglaive -->
+				<tr class="bg-dark-gray-2">
+					<td>Kiryoki's Switchglaive</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kiryoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Loyal Retainer</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>
+					</td>
+				</tr>
+
+				<!-- Myojin Scythe -->
+				<tr class="">
+					<td>Myojin Scythe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Usui Sadamitsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Phoenix Wing -->
+				<tr class="bg-dark-gray-2">
+					<td>Phoenix Wing</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Raijin's Claw -->
+				<tr class="">
+					<td rowspan="2">Raijin's Claw</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a><br><br>
+						<span>Demon Parade Picture Scrolls</span>
+					</td>
+				</tr>
+
+				<!-- Sasayuki -->
+				<tr class="bg-dark-gray-2">
+					<td>Sasayuki</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Viper And The Butterfly (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Seething Dragon -->
+				<tr class="">
+					<td rowspan="2">Seething Dragon</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+				</tr>
+
+				<!-- Stone's Bane -->
+				<tr class="bg-dark-gray-2">
+					<td>Stone's Bane</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Soul Of The Warrior Monk</a>
+					</td>
+				</tr>
+
+				<!-- Tate Eboshi's Switchglaive -->
+				<tr class="">
+					<td>Tate Eboshi's Switchglaive</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a>
+					</td>
+				</tr>
+
+				<!-- Watatsumi's Watch -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Watatsumi's Watch</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Switchglaive -->
+				<tr class="">
+					<td>Wooden Switchglaive</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mumyo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sharp Eyes</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Switchglaive -->
+				<tr class="bg-dark-gray-2">
+					<td>Demon Horde Switchglaive</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
