--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -278,56 +278,174 @@
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Farming For Graces</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-            <div class="place-self-start flex flex-col items-start gap-9">
+            <div class="w-full px-4 flex flex-col items-center lg:grid xl:grid-cols-3 2xl:px-0 gap-6">
                 <!-- Grace Pool 1 -->
-                <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                    <span class="font-bold text-red-600">If Floor Number / 3 = 0.333: </span>
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Acala's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ame-no-Uzume's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanagi's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Kagutsuchi</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Omoikane's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Takeminakata's Grace</span>
-                    <br>
+                <div class="w-full mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-red-600">Grace Pool 1</span>
+                        <span class="text-red-600">If Floor Number / 3 = 0.333</span>
+                    </div>
 
-                    <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
-                    1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49, 52, 55, 58, 61, 64, 67, 70, 73, 76, 79, 82, 85, 88, 
-                    91, 94, 97, 100, 103, 106
-                </p>
-                <hr class="w-3/4 h-[2px] place-self-center bg-stone-600 border-0">
+                    <div class="w-full flex flex-col items-center text-2xl gap-4">
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Acala's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ame-no-Uzume's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanagi's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Kagutsuchi</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Omoikane's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Takeminakata's Grace</span>
+                    </div>
 
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                        <span>1</span>
+                        <span>4</span>
+                        <span>7</span>
+                        <span>10</span>
+                        <span>13</span>
+                        <span>16</span>
+                        <span>19</span>
+                        <span>22</span>
+                        <span>25</span>
+                        <span>28</span>
+                        <span>31</span>
+                        <span>34</span>
+                        <span>37</span>
+                        <span>40</span>
+                        <span>43</span>
+                        <span>46</span>
+                        <span>49</span>
+                        <span>52</span>
+                        <span>55</span>
+                        <span>58</span>
+                        <span>61</span>
+                        <span>64</span>
+                        <span>67</span>
+                        <span>70</span>
+                        <span>73</span>
+                        <span>76</span>
+                        <span>79</span>
+                        <span>82</span>
+                        <span>85</span>
+                        <span>88</span>
+                        <span>91</span>
+                        <span>94</span>
+                        <span>97</span>
+                        <span>100</span>
+                        <span>103</span>
+                        <span>106</span>
+                    </div>
+                </div>
+                
                 <!-- Grace Pool 2 -->
-                <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                    <span class="font-bold text-red-600">If Floor Number / 3 = .666: </span>
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Amaterasu</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanami's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Magatsuhi's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Marici's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ninigi's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Owatatsumi</span>
-                    <br>
+                <div class="w-full mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-red-600">Grace Pool 2</span>
+                        <span class="text-red-600">If Floor Number / 3 = 0.666</span>
+                    </div>
 
-                    <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
-                    2, 5, 8, 11, 14, 17, 20, 23, 26, 29, 32, 35, 38, 41, 44, 47, 50, 53, 56, 59, 62, 65, 68, 71, 74, 77, 80, 83, 86, 89, 
-                    92, 95, 98, 101, 104, 107
-                </p>
-                <hr class="w-3/4 h-[2px] place-self-center bg-stone-600 border-0">
+                    <div class="w-full flex flex-col items-center text-2xl gap-4">
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Amaterasu</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Izanami's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Magatsuhi's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Marici's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ninigi's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Owatatsumi</span>
+                    </div>
+
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                        <span>2</span>
+                        <span>5</span>
+                        <span>8</span>
+                        <span>11</span>
+                        <span>14</span>
+                        <span>17</span>
+                        <span>20</span>
+                        <span>23</span>
+                        <span>26</span>
+                        <span>29</span>
+                        <span>32</span>
+                        <span>35</span>
+                        <span>38</span>
+                        <span>41</span>
+                        <span>44</span>
+                        <span>47</span>
+                        <span>50</span>
+                        <span>53</span>
+                        <span>56</span>
+                        <span>59</span>
+                        <span>62</span>
+                        <span>65</span>
+                        <span>68</span>
+                        <span>71</span>
+                        <span>74</span>
+                        <span>77</span>
+                        <span>80</span>
+                        <span>83</span>
+                        <span>86</span>
+                        <span>89</span>
+                        <span>92</span>
+                        <span>95</span>
+                        <span>98</span>
+                        <span>101</span>
+                        <span>104</span>
+                        <span>107</span>
+                    </div>
+                </div>
 
                 <!-- Grace Pool 3 -->
-                <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                    <span class="font-bold text-red-600">If Floor Number / 3 = .000: </span>
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Futsunushi</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Okoninushi's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Sarutahiko's Grace</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Susano</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Takemikazuchi</span>, 
-                    <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Tsukuyomi</span>
-                    <br>
+                <div class="w-full mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-red-600">Grace Pool 3</span>
+                        <span class="text-red-600">If Floor Number / 3 = 0.000</span>
+                    </div>
 
-                    <span class="font-bold text-red-600">Floors that this Grace pool appears on: </span>
-                    3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 
-                    93, 96, 99, 102, 105, 108
-                </p>
+                    <div class="w-full flex flex-col items-center text-2xl gap-4">
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Futsunushi</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Okoninushi's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Sarutahiko's Grace</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Susano</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Takemikazuchi</span>
+                        <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Tsukuyomi</span>
+                    </div>
+
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                        <span>3</span>
+                        <span>6</span>
+                        <span>9</span>
+                        <span>12</span>
+                        <span>15</span>
+                        <span>18</span>
+                        <span>21</span>
+                        <span>24</span>
+                        <span>27</span>
+                        <span>30</span>
+                        <span>33</span>
+                        <span>36</span>
+                        <span>39</span>
+                        <span>42</span>
+                        <span>45</span>
+                        <span>48</span>
+                        <span>51</span>
+                        <span>54</span>
+                        <span>57</span>
+                        <span>60</span>
+                        <span>63</span>
+                        <span>66</span>
+                        <span>69</span>
+                        <span>72</span>
+                        <span>75</span>
+                        <span>78</span>
+                        <span>81</span>
+                        <span>84</span>
+                        <span>87</span>
+                        <span>90</span>
+                        <span>93</span>
+                        <span>96</span>
+                        <span>99</span>
+                        <span>102</span>
+                        <span>105</span>
+                        <span>108</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
