Updated the credits section in floors.html. Added more content and finished the Splitstaff and Fists Smithing Text tables in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -2974,6 +2974,411 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Splitstaff Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="splitstaff" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Splitstaff Smithing Texts</h2>
+            <img src="./img/splitstaff.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Benkei's Splitstaff -->
+				<tr class="bg-dark-gray-2">
+					<td>Benkei's Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Soul Of The Warrior Monk</a>
+					</td>
+				</tr>
+
+				<!-- Dragon King Splitstaff -->
+				<tr class="">
+					<td>Dragon King Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Giant Toad</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Buddha's Palm</a>
+					</td>
+				</tr>
+
+				<!-- Evil-Crusher Splitstaff -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Evil-Crusher Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Flashfire Splitstaff -->
+				<tr class="">
+					<td>Flashfire Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Kiryoki's Splitstaff -->
+				<tr class="bg-dark-gray-2">
+					<td>Kiryoki's Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kiryoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Loyal Retainer</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a>
+					</td>
+				</tr>
+
+				<!-- Kobo Daishi's Khakkara -->
+				<tr class="">
+					<td>Kobo Daishi's Khakkara</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kukai</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Undying Light</a>
+					</td>
+				</tr>
+
+				<!-- Tempest Splitstaff -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">Tempest Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Tengu's Khakkhara -->
+				<tr class="">
+					<td rowspan="2">Tengu's Khakkhara</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Blood On The Wind (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+
+				<!-- Vajra Splitstaff -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Vajra Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Splitstaff -->
+				<tr class="">
+					<td>Wooden Splitstaff</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>				
+			</table>
+		</div>
+	</section>
+
+
+	<!-- ========== ========== ========== ========== ==========
+    Fists Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="fists" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Fists Smithing Texts</h2>
+            <img src="./img/fists_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Demon Arm Fists -->
+				<tr class="bg-dark-gray-2">
+					<td>Demon Arm Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Watanabe No Tsuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Exorcist Fists -->
+				<tr class="">
+					<td>Exorcist Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Distant Dream</a>
+					</td>
+				</tr>
+
+				<!-- Falcon Claws -->
+				<tr class="bg-dark-gray-2">
+					<td>Falcon Claws</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Dragon Clan</a>
+					</td>
+				</tr>
+
+				<!-- Frost Blossom Clawed Fists -->
+				<tr class="">
+					<td rowspan="3">Frost Blossom Clawed Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Raging Fire Clawed Fists -->
+				<tr class="bg-dark-gray-2">
+					<td>Raging Fire Clawed Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Scampuss Fists -->
+				<tr class="">
+					<td>Scampuss Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Nyotengu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Alluring Ancient</a>
+					</td>
+				</tr>
+
+				<!-- Thunderous Fists -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="2">Thunderous Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Tsuchigumo Clawed Fists -->
+				<tr class="">
+					<td rowspan="4">Tsuchigumo Clawed Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Blood On The Wind (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Spider Clan Ninja</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a>
+					</td>
+				</tr>
+
+				<!-- White Lotus Fists -->
+				<tr class="bg-dark-gray-2">
+					<td rowspan="3">White Lotus Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
+					</td>
+				</tr>
+				<tr class="bg-dark-gray-2">
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Fists -->
+				<tr class="">
+					<td>Wooden Fists</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Danzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Way Of The Ninja: Veteran</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Strike Like A Yokai</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
